--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -155,11 +155,11 @@ border-radius: 5px;
 }
 
 QPushButton:hover {
-  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 aliceblue, stop: 1 cornflowerblue);
+  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 white, stop: 1 silver);
 }
 
 QPushButton:pressed {
-    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 salmon, stop: 1 darkred);
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 aliceblue, stop: 1 cornflowerblue);
 }</string>
          </property>
          <property name="text">
@@ -209,11 +209,11 @@ border-radius: 5px;
 }
 
 QPushButton:hover {
-  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 aliceblue, stop: 1 cornflowerblue);
+  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 white, stop: 1 silver);
 }
 
 QPushButton:pressed {
-    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 salmon, stop: 1 darkred);
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 aliceblue, stop: 1 cornflowerblue);
 }</string>
          </property>
          <property name="text">
@@ -263,11 +263,11 @@ border-radius: 5px;
 }
 
 QPushButton:hover {
-  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 aliceblue, stop: 1 cornflowerblue);
+  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 white, stop: 1 silver);
 }
 
 QPushButton:pressed {
-    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 salmon, stop: 1 darkred);
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 aliceblue, stop: 1 cornflowerblue);
 }</string>
          </property>
          <property name="text">
@@ -317,11 +317,11 @@ border-radius: 5px;
 }
 
 QPushButton:hover {
-  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 aliceblue, stop: 1 cornflowerblue);
+  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 white, stop: 1 silver);
 }
 
 QPushButton:pressed {
-    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 salmon, stop: 1 darkred);
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 aliceblue, stop: 1 cornflowerblue);
 }</string>
          </property>
          <property name="text">
@@ -371,11 +371,11 @@ border-radius: 5px;
 }
 
 QPushButton:hover {
-  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 aliceblue, stop: 1 cornflowerblue);
+  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 white, stop: 1 silver);
 }
 
 QPushButton:pressed {
-    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 salmon, stop: 1 darkred);
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 aliceblue, stop: 1 cornflowerblue);
 }</string>
          </property>
          <property name="text">
@@ -447,11 +447,11 @@ border-radius: 10px;
 }
 
 QPushButton:hover {
-  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 aliceblue, stop: 1 cornflowerblue);
+  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 white, stop: 1 silver);
 }
 
 QPushButton:pressed {
-    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 salmon, stop: 1 darkred);
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 aliceblue, stop: 1 cornflowerblue);
 }</string>
            </property>
            <property name="text">
@@ -501,11 +501,11 @@ border-radius: 10px;
 }
 
 QPushButton:hover {
-  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 aliceblue, stop: 1 cornflowerblue);
+  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 white, stop: 1 silver);
 }
 
 QPushButton:pressed {
-    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 salmon, stop: 1 darkred);
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 aliceblue, stop: 1 cornflowerblue);
 }</string>
            </property>
            <property name="text">
@@ -555,11 +555,11 @@ border-radius: 10px;
 }
 
 QPushButton:hover {
-  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 aliceblue, stop: 1 cornflowerblue);
+  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 white, stop: 1 silver);
 }
 
 QPushButton:pressed {
-    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 salmon, stop: 1 darkred);
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 aliceblue, stop: 1 cornflowerblue);
 }</string>
            </property>
            <property name="text">
@@ -609,11 +609,11 @@ border-radius: 10px;
 }
 
 QPushButton:hover {
-  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 aliceblue, stop: 1 cornflowerblue);
+  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 white, stop: 1 silver);
 }
 
 QPushButton:pressed {
-    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 salmon, stop: 1 darkred);
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 aliceblue, stop: 1 cornflowerblue);
 }</string>
            </property>
            <property name="text">
@@ -724,11 +724,11 @@ border-radius: 5px;
 }
 
 QPushButton:hover {
-  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 aliceblue, stop: 1 cornflowerblue);
+  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 white, stop: 1 silver);
 }
 
 QPushButton:pressed {
-    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 salmon, stop: 1 darkred);
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 aliceblue, stop: 1 cornflowerblue);
 }</string>
          </property>
          <property name="text">
@@ -779,11 +779,11 @@ border-radius: 5px;
 }
 
 QPushButton:hover {
-  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 aliceblue, stop: 1 cornflowerblue);
+  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 white, stop: 1 silver);
 }
 
 QPushButton:pressed {
-    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 salmon, stop: 1 darkred);
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 aliceblue, stop: 1 cornflowerblue);
 }</string>
          </property>
          <property name="text">
